syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

import "info/EmployeeInfo.proto";
import "info/ProjectInfo.proto";

package com.bht.pim.proto.employees;
option java_generic_services = true;
option java_multiple_files = true;

message Employee {
    EmployeeInfo employeeInfo = 1;
    repeated projects.ProjectInfo enrolledProjects = 2;
}

message EmployeeList {
    repeated Employee employees = 1;
}

service EmployeeService {
    rpc getEmployeeById (google.protobuf.Int64Value) returns (Employee);
    rpc getEmployeeList (google.protobuf.Empty) returns (EmployeeList);
}